--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Little Library</title>
-    <link rel="stylesheet" href="viewProfile.css" />
+    <link rel="stylesheet" href="profile.css" />
   </head>
   <body>
   <div class="container">
