--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,9 @@
 <div class="nav-container">
     <div class="logo" id="logo">
+      <a href="/index.html">
         <img src="./scr/logo.png" alt="Logo" width="180" height="180" />
+      </a>
+        
       </div>
       
     <ul class="nav-component">
